added almost all features, need testing

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <name>TeamsPlugin</name>
 
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -58,13 +58,37 @@
           <id>sonatype</id>
           <url>https://oss.sonatype.org/content/groups/public/</url>
       </repository>
+      <repository>
+          <id>jitpack.io</id>
+          <url>https://jitpack.io</url>
+      </repository>
+      <repository>
+          <id>essentials-releases</id>
+          <url>https://repo.essentialsx.net/snapshots/</url>
+      </repository>
+      <repository>
+          <id>paper-repo</id>
+          <url>https://papermc.io/repo/repository/maven-public/</url>
+      </repository>
   </repositories>
 
   <dependencies>
       <dependency>
           <groupId>io.papermc.paper</groupId>
           <artifactId>paper-api</artifactId>
-          <version>1.20.4-R0.1-SNAPSHOT</version>
+          <version>1.20.6-R0.1-SNAPSHOT</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.github.MilkBowl</groupId>
+          <artifactId>VaultAPI</artifactId>
+          <version>1.7</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>net.essentialsx</groupId>
+          <artifactId>EssentialsX</artifactId>
+          <version>2.21.0-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
   </dependencies>
