--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,6 @@ name: TeamsPlugin
 version: '${project.version}'
 main: com.kagenyx.teamsplugin.TeamsPlugin
 api-version: '1.20'
+depend: [Vault, Essentials]
 commands:
-  rank:
+  rankup:
